Demote the "we have navigated away" check to an assertion. https://bugs.webkit.org/show_bug.cgi?id=173509

Reviewed by Simon Fraser.

Now that the expected behavior is that the render tree can't get to the page cache, it's ok to assert.
TODO: We should also have view() check removed at some point.

* dom/Document.cpp:
(WebCore::Document::destroyRenderTree):


Canonical link: https://commits.webkit.org/190407@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@218456 268f45cc-cd09-0410-ab3c-d52691b4dbfc